Sécurité et design

--- a/templates/jeu/_form.html.twig
+++ b/templates/jeu/_form.html.twig
@@ -1,6 +1,8 @@
 <div>
     {{ form_start(form) }}
     {{ form_row(form.nom) }}
+    {{ form_row(form.cover) }}
+    {{ form_row(form.thumbnail) }}
     {{ form_row(form.genre) }}
     {{ form_row(form.prix) }}
     <div class="methodLinks-container">
