--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -7823,11 +7823,50 @@ a.text-dark:hover, a.text-dark:focus {
 body {
   font-family: "Press Start 2P", serif; }
 
+.media-card {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: background-color 0.5s ease-in-out; }
+  .media-card .card-img-top {
+    transition: opacity 0.5s ease-in-out;
+    object-fit: cover; }
+  .media-card .card-body {
+    position: absolute;
+    opacity: 0;
+    z-index: 1;
+    transition: opacity 0.5s ease-in-out; }
+    .media-card .card-body .card-title {
+      color: white;
+      text-align: center;
+      font-size: 0.8em;
+      margin-bottom: 0; }
+  .media-card:hover {
+    background-color: #222222; }
+    .media-card:hover .card-img-top {
+      opacity: 0.5; }
+    .media-card:hover .card-body {
+      opacity: 1; }
+
+.jeu_show .cover {
+  position: relative; }
+  .jeu_show .cover::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(0deg, white 0%, rgba(0, 0, 0, 0) 100%); }
+  .jeu_show .cover img {
+    height: 500px;
+    width: 100%;
+    object-fit: cover; }
 .jeu_show h1 {
   text-align: center; }
 .jeu_show h2 {
   text-align: center; }
-.jeu_show .media .screenshots img {
-  max-width: 560px; }
 
 /*# sourceMappingURL=app.css.map */
