--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -5,7 +5,67 @@ body{
   font-family: "Press Start 2P", serif;
 }
 
+.media-card{
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: background-color 0.5s ease-in-out;
+
+  .card-img-top{
+    transition: opacity 0.5s ease-in-out;
+    object-fit: cover;
+  }
+
+  .card-body {
+    position: absolute;
+    opacity: 0;
+    z-index: 1;
+    transition: opacity 0.5s ease-in-out;
+
+    .card-title {
+      color: white;
+      text-align: center;
+      font-size: 0.8em;
+      margin-bottom: 0;
+    }
+
+  }
+
+  &:hover {
+    background-color: #222222;
+
+    .card-img-top{
+      opacity: 0.5;
+    }
+    .card-body {
+      opacity: 1;
+    }
+  }
+}
+
 .jeu_show {
+
+  .cover {
+    position: relative;
+
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(0,0,0,0) 100%);
+    }
+
+    img {
+      height: 500px;
+      width: 100%;
+      object-fit: cover;
+    }
+  }
 
   h1 {
     text-align: center;
@@ -19,10 +79,8 @@ body{
 
     .screenshots {
       img {
-        max-width: 560px;
       }
     }
 
   }
-
 }
