--- a/templates/jeu/show.html.twig
+++ b/templates/jeu/show.html.twig
@@ -3,43 +3,78 @@
 {% block title %}Jeu{% endblock %}
 
 {% block body %}
-    <div class="jeu_show container">
-        <h1>{{ jeu.nom }}</h1>
-        <div class="infos nes-container with-title mt-5">
-            <p class="title">Infos</p>
-            <div class="price">Prix : {{ jeu.prix }}€</div>
-            <div class="genre">Genre : {{ jeu.genre }}</div>
-            <div class="link"><a href="{{ jeu.lien }}">Lien Steam</a></div>
-        </div>
-        <div class="what nes-container with-title mt-5">
-            <p class="title">C'est quoi ?</p>
-            <div class="what_content">{{ jeu.what }}</div>
-        </div>
-        <div class="why nes-container with-title mt-5">
-            <p class="title">Pourquoi c'est bien ?</p>
-            <div class="why_content">{{ jeu.why }}</div>
-        </div>
-
-        <div class="media flex-column nes-container with-title mt-5">
-            <p class="title">Screenshots et vidéo</p>
-                <div class="screenshots mb-3">
-                    {% for screenshot in jeu.screenshot %}
-                        <img
-                                src="{{ asset('uploads/jeux/screenshots/' ~ screenshot.file) }}"
-                                alt=""/>
-                    {% endfor %}
+    <div class="jeu_show">
+        <div class="container-fluid mb-5">
+            <div class="row">
+                <div class="cover">
+                    <img
+                            src="{{ asset('uploads/jeux/covers/' ~ jeu.cover) }}"
+                            alt=""/>
                 </div>
-                <div class="video">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/{{ jeu.video }}" frameborder="0"
+            </div>
+        </div>
+        <div class="container">
+            <h1>{{ jeu.nom }}</h1>
+            <div class="infos nes-container with-title mt-5">
+                <p class="title">Infos</p>
+                <div class="price">Prix : {{ jeu.prix }}€</div>
+                <div class="genre">Genre : {{ jeu.genre }}</div>
+                <div class="link"><a href="{{ jeu.lien }}">Lien Steam</a></div>
+            </div>
+            <div class="what nes-container with-title mt-5">
+                <p class="title">C'est quoi ?</p>
+                <div class="what_content">{{ jeu.what }}</div>
+            </div>
+            <div class="why nes-container with-title mt-5">
+                <p class="title">Pourquoi c'est bien ?</p>
+                <div class="why_content">{{ jeu.why }}</div>
+            </div>
+
+            <div class="media flex-column nes-container with-title mt-5">
+                <p class="title">Screenshots et vidéo</p>
+                <div class="screenshots mb-3">
+                    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                        <div class="carousel-inner">
+                            {% for screenshot in jeu.screenshot %}
+                                <div class="carousel-item {% if loop.index == 1 %}active{% endif %}">
+                                    <img class="d-block w-100"
+                                         src="{{ asset('uploads/jeux/screenshots/' ~ screenshot.file) }}"
+                                         alt=""/>
+                                </div>
+                            {% endfor %}
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleControls" role="button"
+                           data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleControls" role="button"
+                           data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                </div>
+                <div class="video w-100">
+                    <iframe width="100%" height="600px" src="https://www.youtube.com/embed/{{ jeu.video }}"
+                            frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen></iframe>
                 </div>
+            </div>
+
+            <div class="boutons d-flex flex-column align-items-center">
+                <a class="nes-btn my-3 w-50" href="{{ path('jeu_index') }}">Retour à la liste</a>
+
+                {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                    <a class="nes-btn my-3 w-50" href="{{ path('jeu_edit', {'id': jeu.id}) }}">Editer</a>
+                {% endif %}
+
+                {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                    {{ include('jeu/_delete_form.html.twig') }}
+                {% endif %}
+            </div>
         </div>
 
-        <a href="{{ path('jeu_index') }}">back to list</a>
-
-        <a href="{{ path('jeu_edit', {'id': jeu.id}) }}">edit</a>
-
-        {{ include('jeu/_delete_form.html.twig') }}
     </div>
 {% endblock %}
