--- a/templates/jeu/show.html.twig
+++ b/templates/jeu/show.html.twig
@@ -19,7 +19,7 @@
                 <p class="title">Infos</p>
                 <div class="price">Prix : {{ jeu.prix }}€</div>
                 <div class="genre">Genre : {{ jeu.genre }}</div>
-                <div class="link"><a href="{{ jeu.lien }}">Lien Steam</a></div>
+                <div class="link"><a href="{{ jeu.lien }}" target="_blank">Lien Steam</a></div>
             </div>
             <div class="what nes-container with-title mt-5">
                 <p class="title">C'est quoi ?</p>
