--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -7870,4 +7870,11 @@ body {
 .jeu_show h2 {
   text-align: center; }
 
+form {
+  width: 100%; }
+  form div {
+    margin-bottom: 1em; }
+  form input, form textarea {
+    width: 100%; }
+
 /*# sourceMappingURL=app.css.map */
