--- a/templates/jeu/new.html.twig
+++ b/templates/jeu/new.html.twig
@@ -3,9 +3,13 @@
 {% block title %}New Jeu{% endblock %}
 
 {% block body %}
-    <h1>Create new Jeu</h1>
+    <div class="container">
+        <div class="nes-container with-title mt-5">
+            <h1 class="title">Ajouter un jeu</h1>
 
-    {{ include('jeu/_form.html.twig') }}
+            {{ include('jeu/_form.html.twig') }}
 
-    <a href="{{ path('jeu_index') }}">back to list</a>
+            <a href="{{ path('jeu_index') }}">back to list</a>
+        </div>
+    </div>
 {% endblock %}
