--- a/templates/jeu/index.html.twig
+++ b/templates/jeu/index.html.twig
@@ -1,26 +1,28 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Jeu index{% endblock %}
+{% block title %}All aboard the hype train !{% endblock %}
 
 {% block body %}
     <div class="container">
         <div class="nes-container with-title mt-5">
             <h1 class="title">J'suis tombé là dessus</h1>
 
-            {% for jeu in jeux %}
-                <div class="col-6 col-md-4 col-xl-3">
-                    <a href="{{ path('jeu_show', {'slug': jeu.slug}) }}">
-                        <div class="card media-card mb-4">
-                            <img class="card-img-top" src="{{ asset('uploads/jeux/thumbnails/' ~ jeu.thumbnail) }}">
-                            <div class="card-body">
-                                <p class="card-title">{{ jeu.nom }}</p>
+            <div class="d-flex">
+                {% for jeu in jeux %}
+                    <div class="col-6 col-md-4 col-xl-3">
+                        <a href="{{ path('jeu_show', {'slug': jeu.slug}) }}">
+                            <div class="card media-card mb-4">
+                                <img class="card-img-top" src="{{ asset('uploads/jeux/thumbnails/' ~ jeu.thumbnail) }}">
+                                <div class="card-body">
+                                    <p class="card-title">{{ jeu.nom }}</p>
+                                </div>
                             </div>
-                        </div>
-                    </a>
-                </div>
-            {% else %}
-                no records found
-            {% endfor %}
+                        </a>
+                    </div>
+                {% else %}
+                    no records found
+                {% endfor %}
+            </div>
 
             {% if is_granted('IS_AUTHENTICATED_FULLY') %}
                 <a class="nes-btn is-success" href="{{ path('jeu_new') }}">Create new</a>
