--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -7832,7 +7832,9 @@ body {
   transition: background-color 0.5s ease-in-out; }
   .media-card .card-img-top {
     transition: opacity 0.5s ease-in-out;
-    object-fit: cover; }
+    object-fit: cover;
+    height: 300px;
+    border-radius: calc(0.25rem - 1px); }
   .media-card .card-body {
     position: absolute;
     opacity: 0;
@@ -7876,5 +7878,11 @@ form {
     margin-bottom: 1em; }
   form input, form textarea {
     width: 100%; }
+
+.balloon-404 {
+  width: fit-content; }
+
+.error-404 {
+  font-size: 5em; }
 
 /*# sourceMappingURL=app.css.map */
