--- a/templates/jeu/show.html.twig
+++ b/templates/jeu/show.html.twig
@@ -17,9 +17,11 @@
             <h1>{{ jeu.nom }}</h1>
             <div class="infos nes-container with-title mt-5">
                 <p class="title">Infos</p>
-                <div class="price">Prix : {{ jeu.prix }}€</div>
-                <div class="genre">Genre : {{ jeu.genre }}</div>
-                <div class="link"><a href="{{ jeu.lien }}" target="_blank">Lien Steam</a></div>
+                <ul class="nes-list is-circle">
+                    <li class="price my-2">Prix : {{ jeu.prix }}€</li>
+                    <li class="genre my-2">Genre : {{ jeu.genre }}</li>
+                    <li class="link my-2"><a href="{{ jeu.lien }}" target="_blank">Lien Steam</a></li>
+                </ul>
             </div>
             <div class="what nes-container with-title mt-5">
                 <p class="title">C'est quoi ?</p>
