--- a/templates/game/_form.html.twig
+++ b/templates/game/_form.html.twig
@@ -1,10 +1,10 @@
 <div class="d-flex">
     {{ form_start(form) }}
-    {{ form_row(form.nom) }}
+    {{ form_row(form.name) }}
     {{ form_row(form.genre) }}
-    {{ form_row(form.prix) }}
+    {{ form_row(form.price) }}
     {{ form_row(form.video) }}
-    {{ form_row(form.lien) }}
+    {{ form_row(form.link) }}
     {{ form_row(form.what) }}
     {{ form_row(form.why) }}
     {{ form_row(form.cover) }}
