--- a/templates/game/new.html.twig
+++ b/templates/game/new.html.twig
@@ -7,9 +7,9 @@
         <div class="nes-container with-title mt-5">
             <h1 class="title">Ajouter un jeu</h1>
 
-            {{ include('jeu/_form.html.twig') }}
+            {{ include('game/_form.html.twig') }}
 
-            <a href="{{ path('jeu_index') }}">back to list</a>
+            <a href="{{ path('game_index') }}">back to list</a>
         </div>
     </div>
 {% endblock %}
