--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -7821,7 +7821,19 @@ a.text-dark:hover, a.text-dark:focus {
     color: inherit;
     border-color: #dee2e6; } }
 body {
-  font-family: "Press Start 2P", serif; }
+  font-family: "Press Start 2P", serif;
+  position: relative; }
+
+header {
+  display: flex;
+  justify-content: flex-end;
+  margin: 1em 1em 0 0; }
+  header.show-header {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    z-index: 2; }
 
 .media-card {
   position: relative;
