--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -3,6 +3,21 @@
 
 body {
   font-family: "Press Start 2P", serif;
+  position: relative;
+}
+
+header{
+  display: flex;
+  justify-content: flex-end;
+  margin: 1em 1em 0 0;
+
+  &.show-header {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    z-index: 2;
+  }
 }
 
 .media-card {
