--- a/templates/game/_delete_form.html.twig
+++ b/templates/game/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form class="w-100 d-flex justify-content-center" method="post" action="{{ path('jeu_delete', {'id': jeu.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form class="w-100 d-flex justify-content-center" method="post" action="{{ path('game_delete', {'id': jeu.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ jeu.id) }}">
     <button class="nes-btn is-error my-3 w-50">Delete</button>
