--- a/templates/game/show.html.twig
+++ b/templates/game/show.html.twig
@@ -1,6 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{ jeu.nom }}{% endblock %}
+{% block header %}
+    <header class="show-header">
+        <a class="nes-btn is-primary" href="{{ path('game_index') }}"><i class="nes-logo"></i></a>
+    </header>
+{% endblock %}
+
+{% block title %}{{ jeu.name }}{% endblock %}
 
 {% block body %}
     <div class="jeu_show">
@@ -15,19 +21,23 @@
         </div>
         <div class="container">
             <div class="d-flex flex-column align-items-center">
-                <h1 class="mb-5">{{ jeu.nom }}</h1>
-                {% if like == 0 %}
-                    <a class="nes-btn is-warning" href="{{ path('jeu_like', {'id': jeu.id}) }}"><i class="nes-icon coin is-small mr-2"></i>hype</a>
-                {% else %}
-                    <a class="nes-btn is-error" href="{{ path('jeu_unlike', {'id': jeu.id}) }}"><i class="nes-icon heart is-empty is-small mr-2"></i>unhype</a>
+                <h1 class="mb-5">{{ jeu.name }}</h1>
+                {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                    {% if like == 0 %}
+                        <a class="nes-btn is-warning" href="{{ path('game_like', {'id': jeu.id}) }}"><i
+                                    class="nes-icon coin is-small mr-2"></i>hype</a>
+                    {% else %}
+                        <a class="nes-btn is-error" href="{{ path('game_unlike', {'id': jeu.id}) }}"><i
+                                    class="nes-icon heart is-empty is-small mr-2"></i>unhype</a>
+                    {% endif %}
                 {% endif %}
             </div>
             <div class="infos nes-container with-title mt-5">
                 <p class="title">Infos</p>
                 <ul class="nes-list is-circle">
-                    <li class="price my-2">Prix : {{ jeu.prix }}€</li>
+                    <li class="price my-2">Prix : {{ jeu.price }}€</li>
                     <li class="genre my-2">Genre : {{ jeu.genre }}</li>
-                    <li class="link my-2"><a href="{{ jeu.lien }}" target="_blank">Lien Steam</a></li>
+                    <li class="link my-2"><a href="{{ jeu.link }}" target="_blank">Lien Steam</a></li>
                 </ul>
             </div>
             <div class="what nes-container with-title mt-5">
@@ -73,14 +83,14 @@
             </div>
 
             <div class="boutons d-flex flex-column align-items-center">
-                <a class="nes-btn my-5 w-50" href="{{ path('jeu_index') }}">Retour à la liste</a>
+                <a class="nes-btn my-5 w-50" href="{{ path('game_index') }}">Retour à la liste</a>
 
                 {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-                    <a class="nes-btn my-3 w-50" href="{{ path('jeu_edit', {'id': jeu.id}) }}">Editer</a>
+                    <a class="nes-btn my-3 w-50" href="{{ path('game_edit', {'id': jeu.id}) }}">Editer</a>
                 {% endif %}
 
                 {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-                    {{ include('jeu/_delete_form.html.twig') }}
+                    {{ include('game/_delete_form.html.twig') }}
                 {% endif %}
             </div>
         </div>
