--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -7900,4 +7900,107 @@ form {
 .error-404 {
   font-size: 5em; }
 
+figure {
+  margin: 0;
+  position: absolute; }
+
+.cartridge {
+  display: inline-block;
+  width: 200px;
+  height: 230px;
+  perspective: 1000px; }
+  .cartridge .case {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    transform-style: preserve-3d; }
+  .cartridge .front, .cartridge .back {
+    display: block;
+    height: 100%;
+    width: 100%; }
+    .cartridge .front .base, .cartridge .back .base {
+      background-color: #a7a9ac;
+      position: absolute; }
+    .cartridge .front .tall, .cartridge .back .tall {
+      height: 50%;
+      width: 90%;
+      top: 0;
+      left: 0; }
+    .cartridge .front .wide, .cartridge .back .wide {
+      height: 95%;
+      width: 100%;
+      bottom: 0;
+      right: 0; }
+    .cartridge .front .linebase, .cartridge .back .linebase {
+      position: absolute;
+      background-color: #939598;
+      width: 100%;
+      height: 15%;
+      top: 9%;
+      left: 0; }
+    .cartridge .front .line, .cartridge .back .line {
+      position: absolute;
+      background-color: #a7a9ac;
+      width: 104%;
+      left: -2%;
+      height: calc(15%/9); }
+    .cartridge .front .leftindent, .cartridge .front .rightindent, .cartridge .back .leftindent, .cartridge .back .rightindent {
+      position: absolute;
+      height: 65%;
+      width: 2%;
+      bottom: 0;
+      background-color: #939598; }
+    .cartridge .front .rightindent, .cartridge .back .rightindent {
+      right: 0; }
+    .cartridge .front .oval, .cartridge .back .oval {
+      position: absolute;
+      width: 75%;
+      height: 15%;
+      background-color: #939598;
+      border: #a7a9ac solid 4px;
+      border-radius: 10000000px;
+      left: calc(12.5% - 2%);
+      top: 7%; }
+    .cartridge .front .label, .cartridge .back .label {
+      background-color: #828487;
+      background-position: center;
+      background-size: cover;
+      height: 140px;
+      width: 70%;
+      bottom: 7%;
+      left: calc(15% - 1%);
+      position: absolute;
+      border: #828487 solid 2px;
+      border-radius: 4px; }
+  .cartridge .back {
+    transform: translateZ(-10px); }
+  .cartridge .one {
+    top: 10.6666666667%; }
+  .cartridge .two {
+    top: 14%; }
+  .cartridge .three {
+    top: 17.3333333333%; }
+  .cartridge .four {
+    top: 20.6666666667%; }
+
+#table {
+  display: table;
+  background: #f0f9ff;
+  /* Old browsers */
+  background: -moz-radial-gradient(center, ellipse cover, #f0f9ff 0%, #a7a9ac 100%);
+  /* FF3.6-15 */
+  background: -webkit-radial-gradient(center, ellipse cover, #f0f9ff 0%, #a7a9ac 100%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: radial-gradient(ellipse at center, #f0f9ff 0%, #a7a9ac 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0f9ff', endColorstr='#d3e3ff',GradientType=1 );
+  /* IE6-9 fallback on horizontal gradient */ }
+
+#centeralign {
+  display: table-cell;
+  vertical-align: middle; }
+
+.label {
+  background-image: url("http://pre08.deviantart.net/d867/th/pre/i/2012/114/a/9/pokemon_yellow_cover_art_by_comunello76-d4xfrr5.png"); }
+
 /*# sourceMappingURL=app.css.map */
