--- a/templates/bundles/TwigBundle/Exception/error404.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error404.html.twig
@@ -11,6 +11,6 @@
             <i class="nes-mario mt-3"></i>
         </div>
         <span class="error-404 mt-5">ERROR 404</span>
-        <a href="{{ path('jeu_index') }}" class="nes-btn mt-5">Ramenez moi à la maison</a>
+        <a href="{{ path('game_index') }}" class="nes-btn mt-5">Ramenez moi à la maison</a>
     </div>
 {% endblock %}
