--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -11,9 +11,44 @@
 {% block body %}
     <div class="container">
         <h1>hype.</h1>
+        {% if userJeux is not empty %}
+            <div class="nes-container with-title mt-5">
+                <h2 class="title">Il m'a hypé le con</h2>
 
-        <div class="nes-container with-title mt-5">
-            <h2 class="title">Toutes mes trouvailles</h2>
+                <div class="d-flex">
+                    <div class="row w-100">
+                        {% for jeu in userJeux|slice(0, 1) %}
+                            <div class="col-12 col-md-4 col-xl-3">
+                                <a class="game-link" href="{{ path('game_show', {'slug': jeu.slug}) }}">
+                                    <section class="cartridge">
+                                        <div class="case">
+                                            <figure class="front">
+                                                <figure class="base tall"></figure>
+                                                <figure class="base wide"></figure>
+                                                <figure class="linebase"></figure>
+                                                <figure class="line one"></figure>
+                                                <figure class="line two"></figure>
+                                                <figure class="line three"></figure>
+                                                <figure class="line four"></figure>
+                                                <figure class="leftindent"></figure>
+                                                <figure class="rightindent"></figure>
+                                                <figure class="oval"></figure>
+                                                <figure class="label"
+                                                        style="background-image: url({{ asset('uploads/jeux/thumbnails/' ~ jeu.thumbnail) }})"></figure>
+                                            </figure>
+                                        </div>
+                                    </section>
+                                    <div class="game-name">{{ jeu.name }}</div>
+                                </a>
+                            </div>
+                        {% endfor %}
+                    </div>
+                </div>
+            </div>
+        {% endif %}
+
+        <div class="nes-container with-title my-5">
+            <h2 class="title">Dernières trouvailles</h2>
 
             <div class="d-flex justify-content-center">
                 <div class="row w-100">
@@ -49,7 +84,7 @@
 
             <div class="row">
                 <div class="col-12 d-flex justify-content-center">
-                    <a class="nes-btn" href="{{ path('app_index') }}">retour.</a>
+                    <a class="nes-btn" href="{{ path('game_index') }}">more.</a>
 
                     {% if is_granted('IS_AUTHENTICATED_FULLY') %}
                         <a class="nes-btn is-success" href="{{ path('game_new') }}">Create new</a>
