--- a/templates/game/show.html.twig
+++ b/templates/game/show.html.twig
@@ -2,7 +2,7 @@
 
 {% block header %}
     <header class="show-header">
-        <a class="nes-btn is-primary" href="{{ path('game_index') }}"><i class="nes-logo"></i></a>
+        <a class="nes-btn is-primary" href="{{ path('profile_index') }}"><i class="nes-logo"></i></a>
     </header>
 {% endblock %}
 
@@ -85,12 +85,13 @@
             <div class="boutons d-flex flex-column align-items-center">
                 <a class="nes-btn my-5 w-50" href="{{ path('app_index') }}">Retour à la liste</a>
 
-                {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                {% if is_granted('ROLE_ADMIN') %}
                     <a class="nes-btn my-3 w-50" href="{{ path('game_edit', {'id': jeu.id}) }}">Editer</a>
+                    {{ include('game/_delete_form.html.twig') }}
                 {% endif %}
 
                 {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-                    {{ include('game/_delete_form.html.twig') }}
+
                 {% endif %}
             </div>
         </div>
