--- a/templates/game/index.html.twig
+++ b/templates/game/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block header %}
     <header>
-        <a class="nes-btn is-primary" href="{{ path('game_index') }}"><i class="nes-logo"></i></a>
+        <a class="nes-btn is-primary" href="{{ path('profile_index') }}"><i class="nes-logo"></i></a>
     </header>
 {% endblock %}
 
