--- a/templates/game/show.html.twig
+++ b/templates/game/show.html.twig
@@ -2,7 +2,8 @@
 
 {% block header %}
     <header class="show-header">
-        <a class="nes-btn is-primary" href="{{ path('profile_index') }}"><i class="nes-logo"></i></a>
+        <a class="nes-btn d-flex justify-content-center align-items-center ml-5" href="{{ path('app_index') }}">hype.</a>
+        <a class="nes-btn is-primary mr-5" href="{{ path('profile_index') }}"><i class="nes-logo"></i></a>
     </header>
 {% endblock %}
 
