--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -7826,12 +7826,11 @@ body {
 
 header {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   margin: 1em 1em 0 0; }
   header.show-header {
     position: absolute;
     top: 0;
-    right: 0;
     width: 100%;
     z-index: 2; }
 
