--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -8,13 +8,16 @@ body {
 
 header {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   margin: 1em 1em 0 0;
+
+  &.home-header {
+
+  }
 
   &.show-header {
     position: absolute;
     top: 0;
-    right: 0;
     width: 100%;
     z-index: 2;
   }
